--- a/.github/workflows/cfd-codeql.yml
+++ b/.github/workflows/cfd-codeql.yml
@@ -67,26 +67,10 @@ jobs:
 #     #   If the Autobuild fails above, remove it and uncomment the following three lines. 
 #     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-#     # - run: |
-#     #   echo "Run, Build Application using script"
-#     #   ./location_of_script_within_repo/buildscript.sh
-  build:
-    permissions:
-      actions: read
-      contents: read
-    runs-on: ubuntu-latest
+    - run: |
+      echo "Run, Build Application using script"
+      ./location_of_script_within_repo/buildscript.sh
 
-    steps:
-    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
-    - name: Set up JDK 11
-      uses: actions/setup-java@de1bb2b0c5634f0fc4438d7aa9944e68f9bf86cc
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@3fbe033aaae657f011f88f29be9e65ed26bd29ef
-      with:
-        arguments: build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@18fe527fa8b29f134bb91f32f1a5dc5abb15ed7f
